make sure spacing is at bottom on verify email page. fix problem with toast on verification email.

--- a/src/app/verify-email/verify-email.component.css
+++ b/src/app/verify-email/verify-email.component.css
@@ -41,6 +41,7 @@
 
 .verify-cta {
     margin-top: 60px;
+    margin-bottom: 60px;
     border-radius: 5px;
     border: #f23b2c;
     background-color: #f23b2c;
@@ -80,6 +81,7 @@
 
 #loading-icon {
     margin-top: 100px;
+    margin-bottom: 60px;
     border: none;
     padding: 0;
     background:transparent;
